# GIMAN

./: .aider.chat.history.md  .aider.input.history  .gitignore  .pre-commit-config.yaml  .ruff.toml  COMPREHENSIVE_FILE_ANALYSIS.md  GIMAN_Codebase_Assessment.md  GIMAN_PHASE_REORGANIZATION_STRATEGY.md  HW1_S1.ipynb  PHASE5_COMPLETION_CELEBRATION.md  PHASE_3_2_COMPLETION_REPORT.md  README.md  TODO.md  analyze_enhanced_phase4.py  compare_phase4_systems.py  create_patient_registry.py  create_phase2_genomic_visualizations.py  create_phase2_summary_visualization.py  create_ppmi_dcm_manifest.py  debug_event_id.py  debug_phase4_unified_system.py  demo_complete_workflow.py  enhanced_giman_explainability.py  explainability_Gemini.py  giman_research_analytics.py  phase1_prognostic_development.py  phase2_1_spatiotemporal_imaging_encoder.py  phase2_2_genomic_transformer_encoder.py  phase2_scale_imaging_conversion.py  phase3_1_integration_demo_pipeline.py  phase3_1_real_data_integration.py  phase3_2_enhanced_gat_demo.py  phase3_2_real_data_integration.py  phase3_2_simplified_demo.py  phase3_3_real_data_integration.py  phase4_enhanced_unified_system.py  phase4_optimized_system.py  phase4_unified_giman_system.py  pyproject.toml  repomix-output.xml  (+10 more)
.aider.tags.cache.v4/: cache.db
Docs/: COMPLETE_EXECUTION_REPORT.md  CROSS_MODAL_ATTENTION_SUCCESS.md  DATA_ORGANIZATION_GUIDE.md  FILES_MCP_SETUP_GUIDE.md  FILE_ORGANIZATION_GUIDELINES.md  GIMAN_Architecture_Evolution_Plan.md  GIMAN_Complete_Summary.md  GIMAN_Multimodal_Prognostic_Development_ToDo.md  GIMAN_Neural_Architecture_Plan.md  GIMAN_Prognostic_Executive_Summary.md  IMPORT_ISSUES_RESOLUTION_REPORT.md  Model_Backup_Recovery_Guide.md  Phase1_Completion_Summary.md  QUICK_MODEL_ACCESS_GUIDE.md  README_PPMI_PROCESSING.md  STAGE_I_ENHANCEMENT_SUMMARY.md  comprehensive-project-guide.md  data_dictionary.md  development-setup.md  enhanced_giman_v1.1.0_analysis.md  phase1_prognostic_data_assessment.md  phase_comparison_results.md  preprocessing-strategy.md  project_state_memory.md
HW/: perceptron_training_data.csv
config/: data_sources.yaml  model.yaml  preprocessing.yaml
configs/: optimal_binary_config.py
explainability_env/: pyvenv.cfg
notebooks/: HW1_S1.ipynb  HW1_S1.py  README.md  class_imbalance_analysis.ipynb  data_analysis.ipynb  giman_consolidation_pipeline.ipynb  preprocessing_test.ipynb  validation_dashboard.ipynb
patno_reports/: patno_standardization_report.md
scripts/: analyze_alpha_syn_expanded.py  analyze_expanded_cohort.py  complete_imputation.py  create_enhanced_dataset.py  create_enhanced_dataset_v2.py  create_final_binary_model.py  create_model_backup_system.py  create_patient_registry.py  create_ppmi_dcm_manifest.py  debug_event_id.py  demo_complete_workflow.py  fix_enhanced_graph.py  fix_missing_cohort.py  integrate_alpha_syn_biomarkers.py  integrate_biomarker_data.py  migrate_ppmi3_dicoms.py  optimize_binary_classifier.py  phase2_scale_imaging_conversion.py  restore_production_model.py  run_explainability_analysis.py  standalone_imputation_demo.py  test_best_configs.py  train_giman.py  train_giman_complete.py  update_imputation.py  validate_complete_dataset.py  validate_production_model.py  (+1 more)
(+284 files in other folders)
