[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "giman-pipeline"
version = "0.1.0"
description = "Graph-Informed Multimodal Attention Network (GIMAN) preprocessing pipeline for PPMI data"
authors = ["Blair Dupre <dupre.blair92@gmail.com>"]
readme = "README.md"
packages = [{include = "giman_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.24.0,<2.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
pyyaml = ">=6.0.0,<7.0.0"
hydra-core = ">=1.3.0,<2.0.0"
pydicom = ">=2.4.0,<3.0.0"
nibabel = ">=5.1.0,<6.0.0"
SimpleITK = ">=2.3.0,<3.0.0"
networkx = ">=3.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
mypy = ">=1.5.0"
jupyter = ">=1.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"

[tool.poetry.scripts]
giman-preprocess = "giman_pipeline.cli:main"

[tool.ruff]
# Extend the shared ruff configuration
extend = "ruff.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/giman_pipeline",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true